--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git@github.com:rudi23/movee.git"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "node-fetch": "^1.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
