fix eslint react/forbid-prop-types

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,9 +37,7 @@
       1,
       {
         "forbid": [
-          "any",
-          "array",
-          "object"
+          "any"
         ]
       }
     ],
