--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "moment": "^2.18.1",
     "node-fetch": "^1.7.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
+    "react-dom": "^15.6.1",
     "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "3.9.1",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "2.x",
-    "eslint-plugin-react": "6.6.0",
-    "react-scripts": "0.9.5"
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "react-scripts": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
