--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^15.6.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
+    "react-star-rating-component": "^1.3.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
