remove jquery, replace accordion

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash.isequal": "^4.5.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
+    "rc-collapse": "^1.7.6",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
