--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
-    "react-star-rating-component": "^1.3.0"
+    "react-star-rating-component": "^1.3.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
