--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
-
-# testing
-/coverage
-
-# production
 /build
+/public/bundle.js
 
-# misc
 .DS_Store
 .env
 npm-debug.log*
