--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "url": "git@github.com:rudi23/movee.git"
   },
   "dependencies": {
-    "express": "4.16.2",
-    "express-http-proxy": "1.1.0",
+    "express": "^4.16.2",
+    "express-http-proxy": "^1.1.0",
     "lodash.isequal": "^4.5.0",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "rc-collapse": "^1.7.6",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.1",
-    "react-dom": "^15.6.1",
+    "moment": "^2.20.1",
+    "prop-types": "^15.6.0",
+    "rc-collapse": "^1.7.7",
+    "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.1.2",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "react-star-rating-component": "^1.3.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,21 +36,18 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.7",
     "eslint": "^4.14.0",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "nodemon": "^1.14.3",
-    "npm-run-all": "4.1.2",
-    "redux-devtools-extension": "^2.13.2",
+    "npm-run-all": "^4.1.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
