--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "url": "git@github.com:rudi23/movee.git"
   },
   "dependencies": {
+    "bunyan": "^1.8.12",
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.20.1",
+    "object-assign-polyfill": "^0.1.0",
+    "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "rc-collapse": "^1.7.7",
     "react": "^16.2.0",
@@ -23,37 +26,56 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "unfetch": "^3.0.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-cli": "^7.0.0-beta.3",
+    "babel-core": "^7.0.0-beta.3",
+    "@babel/core": "^7.0.0-beta.36",
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babili": "^0.1.4",
+    "babili-webpack-plugin": "^0.1.2",
+    "brotli-webpack-plugin": "^0.5.0",
     "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.3.1",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "nodemon": "^1.14.3",
     "npm-run-all": "^4.1.2",
+    "object.values": "^1.0.4",
+    "offline-plugin": "^4.9.0",
+    "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.1",
+    "url-polyfill": "^1.0.10",
+    "useragent": "^2.1.12",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
-    "webpack-manifest-plugin": "^1.3.2"
+    "webpack-cleanup-plugin": "^0.5.1"
   },
+  "peerDependencies": {},
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
-    "dev:build-client": "webpack --config config/webpack.client.js --watch",
-    "dev:build-server": "webpack --config config/webpack.server.js --watch",
-    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev": "npm-run-all --parallel dev:start dev:watch-client dev:watch-server",
+    "dev:watch-client": "BABEL_ENV=dev webpack --config config/webpack.dev.js --watch",
+    "dev:watch-server": "BABEL_ENV=server webpack --config config/webpack.server.js --watch",
+    "dev:build-server": "BABEL_ENV=server webpack --config config/webpack.server.js",
+    "dev:start": "npm run dev:build-server && nodemon --watch dist --exec 'node dist/server/server.js'",
+    "start": "node dist/server/server.js | bunyan",
+    "build:all": "npm run build:chrome; npm run build:safari; npm run build:edge; npm run build:firefox; npm run build:fallback; npm run build:server",
+    "build:client": "webpack --config config/webpack.client.js",
+    "build:chrome": "BABEL_ENV=chrome webpack --config config/webpack.chrome.js --json > dist/client/bundle/chrome/webpack.json",
+    "build:safari": "BABEL_ENV=safari webpack --config config/webpack.safari.js --json > dist/client/bundle/safari/webpack.json",
+    "build:edge": "BABEL_ENV=edge webpack --config config/webpack.edge.js --json > dist/client/bundle/edge/webpack.json",
+    "build:firefox": "BABEL_ENV=firefox webpack --config config/webpack.firefox.js --json > dist/client/bundle/firefox/webpack.json",
+    "build:fallback": "BABEL_ENV=fallback webpack --config config/webpack.fallback.js --json > dist/client/bundle/fallback/webpack.json",
+    "build:server": "BABEL_ENV=server webpack --config config/webpack.server.js --json > dist/server/webpack.json",
+    "build:prod": "NODE_ENV=production npm run build:all;",
     "lint": "eslint ."
   },
   "jest": {
