--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "__NODE__": true,
     "__WEB__": true,
     "__DEV__": true,
-    "window": true
+    "window": true,
+    "POLYFILL_OBJECT_ASSIGN'": true
   },
   "rules": {
     "react/jsx-filename-extension": [
