--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lodash.isequal": "^4.5.0",
     "moment": "^2.20.1",
     "object-assign-polyfill": "^0.1.0",
+    "object.values": "^1.0.4",
+    "offline-plugin": "^4.9.0",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "rc-collapse": "^1.7.7",
@@ -27,6 +29,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "unfetch": "^3.0.0",
+    "url-polyfill": "^1.0.10",
+    "useragent": "^2.1.12",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
   },
@@ -49,12 +53,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "nodemon": "^1.14.3",
     "npm-run-all": "^4.1.2",
-    "object.values": "^1.0.4",
-    "offline-plugin": "^4.9.0",
     "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.1",
-    "url-polyfill": "^1.0.10",
-    "useragent": "^2.1.12",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-cleanup-plugin": "^0.5.1"
@@ -76,7 +76,7 @@
     "build:fallback": "BABEL_ENV=fallback webpack --config config/webpack.fallback.js --json > dist/client/bundle/fallback/webpack.json",
     "build:server": "BABEL_ENV=server webpack --config config/webpack.server.js --json > dist/server/webpack.json",
     "build:prod": "NODE_ENV=production npm run build:all;",
-    "lint": "eslint ."
+    "lint": "eslint src"
   },
   "jest": {
     "collectCoverageFrom": [
