--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bunyan": "^1.8.12",
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.20.1",
     "object-assign-polyfill": "^0.1.0",
@@ -23,11 +24,13 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-star-rating-component": "^1.3.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "serialize-javascript": "^1.4.0",
     "unfetch": "^3.0.0",
     "url-polyfill": "^1.0.10",
     "useragent": "^2.1.12",
@@ -35,16 +38,21 @@
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
     "babel-cli": "^7.0.0-beta.3",
     "babel-core": "^7.0.0-beta.3",
-    "@babel/core": "^7.0.0-beta.36",
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
+    "babel-plugin-transform-es2015-block-scoping": "^7.0.0-beta.3",
+    "babel-plugin-transform-react-jsx": "^7.0.0-beta.3",
+    "babel-preset-env": "^7.0.0-beta.3",
     "babili": "^0.1.4",
     "babili-webpack-plugin": "^0.1.2",
     "brotli-webpack-plugin": "^0.5.0",
-    "css-loader": "^0.28.7",
     "copy-webpack-plugin": "^4.3.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -56,8 +64,8 @@
     "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-cleanup-plugin": "^0.5.1"
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-server": "^2.9.7"
   },
   "peerDependencies": {},
   "scripts": {
