--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
     "babel-plugin-transform-es2015-block-scoping": "^7.0.0-beta.3",
     "babel-plugin-transform-react-jsx": "^7.0.0-beta.3",
+    "babel-plugin-transform-runtime": "^7.0.0-beta.3",
     "babel-preset-env": "^7.0.0-beta.3",
+    "babel-runtime": "^7.0.0-beta.3",
     "babili": "^0.1.4",
     "babili-webpack-plugin": "^0.1.2",
     "brotli-webpack-plugin": "^0.5.0",
