--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-http-proxy": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "lodash.isequal": "^4.5.0",
