--- a/.eslintrc
+++ b/.eslintrc
@@ -1,80 +1,165 @@
 {
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "extends": "airbnb",
   "parser": "babel-eslint",
-  "globals": {
-    "beforeEach": true,
-    "describe": true,
-    "it": false,
-    "__NODE__": true,
-    "__WEB__": true,
-    "__DEV__": true,
-    "window": true,
-    "POLYFILL_OBJECT_ASSIGN'": true
-  },
+  "plugins": [
+    "eslint-plugin-babel",
+    "react"
+  ],
   "rules": {
+    "global-require": "off",
+    "import/exports-last": "error",
+    "import/extensions": "off",
+    "import/no-extraneous-dependencies": "off",
+    "import/no-unresolved": [
+      "warn"
+    ],
+    "import/order": [
+      "error",
+      {
+        "newlines-between": "never"
+      }
+    ],
+    "jsx-a11y/accessible-emoji": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "max-len": [
+      "error",
+      120,
+      {
+        "ignoreComments": true,
+        "ignoreRegExpLiterals": true,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreTrailingComments": true,
+        "ignoreUrls": true,
+        "tabWidth": 4
+      }
+    ],
+    "no-irregular-whitespace": [
+      "error",
+      {
+        "skipComments": false,
+        "skipRegExps": false,
+        "skipStrings": false,
+        "skipTemplates": false
+      }
+    ],
+    "no-plusplus": [
+      "error",
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
+    "no-use-before-define": [
+      "error",
+      {
+        "classes": true,
+        "functions": false,
+        "variables": true
+      }
+    ],
+    "padding-line-between-statements": [
+      "error",
+      {
+        "blankLine": "always",
+        "next": "return",
+        "prev": "*"
+      },
+      {
+        "blankLine": "any",
+        "next": "return",
+        "prev": [
+          "block-like",
+          "const",
+          "let",
+          "var"
+        ]
+      },
+      {
+        "blankLine": "always",
+        "next": "export",
+        "prev": "*"
+      },
+      {
+        "blankLine": "any",
+        "next": "export",
+        "prev": "export"
+      }
+    ],
+    "prefer-destructuring": "off",
+    "prefer-promise-reject-errors": "off",
+    "react/default-props-match-prop-types": [
+      "error",
+      {
+        "allowRequiredDefaults": false
+      }
+    ],
+    "react/forbid-prop-types": 1,
+    "react/jsx-closing-tag-location": "off",
     "react/jsx-filename-extension": [
-      1,
+      "error",
       {
         "extensions": [
+          ".jsx",
           ".js"
         ]
       }
     ],
-    "comma-dangle": [
+    "react/jsx-first-prop-new-line": "error",
+    "react/jsx-indent": [
+      "error",
+      4
+    ],
+    "react/jsx-indent-props": [
+      "error",
+      4
+    ],
+    "react/jsx-key": "error",
+    "react/jsx-sort-default-props": [
       "error",
       {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "never"
+        "ignoreCase": true
       }
     ],
-    "no-plusplus": 1,
-    "jsx-a11y/no-static-element-interactions": 1,
-    "jsx-a11y/label-has-for": [
-      2,
+    "react/jsx-sort-props": [
+      "error",
       {
-        "required": {
-          "every": [
-            "id"
-          ]
-        }
+        "ignoreCase": true
       }
     ],
-    "jsx-a11y/anchor-is-valid": [
-      2,
+    "react/no-access-state-in-setstate": "error",
+    "react/no-redundant-should-component-update": "off",
+    "react/prefer-stateless-function": 1,
+    "react/require-default-props": "error",
+    "react/require-optimization": "error",
+    "react/sort-comp": [
+      "error",
       {
-        "components": [
-          "Link"
-        ],
-        "specialLink": [
-          "to"
-        ],
-        "aspects": [
-          "noHref",
-          "invalidHref",
-          "preferButton"
+        "order": [
+          "static-methods",
+          "lifecycle",
+          "/^on.+$/",
+          "getters",
+          "setters",
+          "/^(get|set)(?!(InitialState$|DefaultProps$|ChildContext$)).+$/",
+          "everything-else",
+          "/^render.+$/",
+          "render"
         ]
       }
     ],
-    "react/forbid-prop-types": [
-      1,
+    "react/sort-prop-types": [
+      "error",
       {
-        "forbid": [
-          "any"
-        ]
+        "callbacksLast": false,
+        "ignoreCase": true,
+        "requiredFirst": false
       }
-    ],
-    "react/no-did-mount-set-state": 0,
-    "import/extensions": 1,
-    "import/no-extraneous-dependencies": 1,
-    "import/no-unresolved": 1,
-    "import/prefer-default-export": 0
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
+    ]
   }
 }
