--- a/package.json
+++ b/package.json
@@ -6,123 +6,79 @@
     "type": "git",
     "url": "git@github.com:rudi23/movee.git"
   },
+  "scripts": {
+    "clean": "rimraf dist",
+    "dev": "npm run clean && node ./scripts/start-dev-server.js && node ./dist/server/app.js",
+    "dev:start": "npm run dev:build-server && nodemon --watch dist --exec 'node dist/server/server.js'",
+    "build": "npm run clean && NODE_ENV=production node ./scripts/build.js",
+    "start": "node dist/server/app.js | bunyan",
+    "lint": "eslint src"
+  },
   "dependencies": {
     "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.2",
-    "express-http-proxy": "^1.1.0",
+    "express": "^4.16.4",
+    "express-http-proxy": "^1.4.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "lodash.isequal": "^4.5.0",
-    "moment": "^2.20.1",
-    "object-assign-polyfill": "^0.1.0",
-    "object.values": "^1.0.4",
-    "offline-plugin": "^4.9.0",
-    "promise-polyfill": "^7.0.0",
-    "prop-types": "^15.6.0",
-    "rc-collapse": "^1.7.7",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.2.0",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "rc-collapse": "^1.10.0",
+    "react": "^16.7.0-alpha.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.7.0-alpha.0",
     "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.1.0",
+    "react-router": "^4.4.0-beta.6",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
-    "react-star-rating-component": "^1.3.0",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
-    "serialize-javascript": "^1.4.0",
-    "unfetch": "^3.0.0",
-    "url-polyfill": "^1.0.10",
-    "useragent": "^2.1.12",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "react-router-config": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6",
+    "react-star-rating-component": "^1.4.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.5.0",
+    "unfetch": "^4.0.1",
+    "useragent": "^2.3.0",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
-    "babel-cli": "^7.0.0-beta.3",
-    "babel-core": "^7.0.0-beta.3",
-    "babel-eslint": "^8.1.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
-    "babel-plugin-transform-es2015-block-scoping": "^7.0.0-beta.3",
-    "babel-plugin-transform-react-jsx": "^7.0.0-beta.3",
-    "babel-plugin-transform-runtime": "^7.0.0-beta.3",
-    "babel-preset-env": "^7.0.0-beta.3",
-    "babel-runtime": "^7.0.0-beta.3",
-    "babili": "^0.1.4",
-    "babili-webpack-plugin": "^0.1.2",
-    "brotli-webpack-plugin": "^0.5.0",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "nodemon": "^1.14.3",
-    "npm-run-all": "^4.1.2",
-    "postcss-loader": "^2.0.9",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dev-server": "^2.9.7"
-  },
-  "peerDependencies": {},
-  "scripts": {
-    "dev": "npm-run-all --parallel dev:start dev:watch-client dev:watch-server",
-    "dev:watch-client": "BABEL_ENV=dev webpack --config config/webpack.dev.js --watch",
-    "dev:watch-server": "BABEL_ENV=server webpack --config config/webpack.server.js --watch",
-    "dev:build-server": "BABEL_ENV=server webpack --config config/webpack.server.js",
-    "dev:start": "npm run dev:build-server && nodemon --watch dist --exec 'node dist/server/server.js'",
-    "start": "node dist/server/server.js | bunyan",
-    "build:all": "npm run build:chrome; npm run build:safari; npm run build:edge; npm run build:firefox; npm run build:fallback; npm run build:server",
-    "build:client": "webpack --config config/webpack.client.js",
-    "build:chrome": "BABEL_ENV=chrome webpack --config config/webpack.chrome.js --json > dist/client/bundle/chrome/webpack.json",
-    "build:safari": "BABEL_ENV=safari webpack --config config/webpack.safari.js --json > dist/client/bundle/safari/webpack.json",
-    "build:edge": "BABEL_ENV=edge webpack --config config/webpack.edge.js --json > dist/client/bundle/edge/webpack.json",
-    "build:firefox": "BABEL_ENV=firefox webpack --config config/webpack.firefox.js --json > dist/client/bundle/firefox/webpack.json",
-    "build:fallback": "BABEL_ENV=fallback webpack --config config/webpack.fallback.js --json > dist/client/bundle/fallback/webpack.json",
-    "build:server": "BABEL_ENV=server webpack --config config/webpack.server.js --json > dist/server/webpack.json",
-    "build:prod": "NODE_ENV=production npm run build:all;",
-    "lint": "eslint src"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "mjs",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-classes": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.3.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-lodash": "^3.3.4",
+    "chalk": "^2.4.1",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.7",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "extract-css-chunks-webpack-plugin": "^3.2.1",
+    "file-loader": "^2.0.0",
+    "koa": "^2.6.1",
+    "koa-webpack": "^5.1.1",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "refavicons-webpack-plugin": "0.0.2",
+    "require-from-string": "^2.0.2",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-stats-plugin": "^0.2.1"
   }
 }
