--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.5.0",
-    "unfetch": "^4.0.1",
-    "useragent": "^2.3.0",
-    "webpack-merge": "^4.1.4"
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
