--- a/package.json
+++ b/package.json
@@ -12,7 +12,32 @@
     "dev:start": "npm run dev:build-server && nodemon --watch dist --exec 'node dist/server/server.js'",
     "build": "npm run clean && NODE_ENV=production node ./scripts/build.js",
     "start": "node dist/server/app.js | bunyan",
-    "lint": "eslint src"
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "prettier": "prettier --write",
+    "prettier:styles": "prettier ./**/*.{scss,css} --write",
+    "stylelint": "stylelint './**/*.{scss,css}'",
+    "test": "echo 'Tests not found'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run stylelint && lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint-fix",
+      "git add"
+    ],
+    "*.json": [
+      "npm run prettier",
+      "git add"
+    ],
+    "*.{scss,css}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "bunyan": "^1.8.12",
@@ -57,20 +82,29 @@
     "cssnano": "^4.1.7",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "file-loader": "^2.0.0",
+    "husky": "^1.1.2",
     "koa": "^2.6.2",
     "koa-webpack": "^5.1.1",
+    "lint-staged": "^8.0.4",
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.14.3",
     "refavicons-webpack-plugin": "0.0.2",
     "require-from-string": "^2.0.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
+    "stylelint": "^9.6.0",
+    "stylelint-config-prettier": "^3.0.4",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^2.5.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
