--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.4",
-    "express-http-proxy": "^1.5.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
+    "koa-better-http-proxy": "^0.2.4",
+    "koa-compress": "^3.0.0",
+    "koa-helmet": "^4.0.0",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
+    "koa2-useragent": "^0.3.1",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
@@ -63,8 +66,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
-    "serialize-javascript": "^1.5.0",
-    "useragent": "^2.3.0"
+    "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
