--- a/package.json
+++ b/package.json
@@ -54,15 +54,14 @@
     "prop-types": "^15.6.2",
     "rc-collapse": "^1.10.0",
     "react": "^16.7.0-alpha.0",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0-alpha.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.1.0",
     "react-router": "^4.4.0-beta.6",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.4.0-beta.6",
     "react-star-rating-component": "^1.4.1",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
